# conway

./: Main.hs  README.md  conway.cabal
src/: Game.hs  Life.hs  Prelude.hs
